Fixed layout issues - only the content scrolls

--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -1,11 +1,24 @@
+@import '../../styles/global';
+
 .about-me {
   background-color: #2c2d33;
   color: white;
+  position: sticky;
+  top: 0;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  & > .detail {
+    text-align: center;
+  }
+
+  @media #{$media-small} {
+    position: inherit;
+    top: inherit;
+  }
 }
 
 .name {
