--- a/src/components/layout.reset.scss
+++ b/src/components/layout.reset.scss
@@ -87,9 +87,14 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+
   font: inherit;
   vertical-align: baseline;
+
+  font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
 }
 
 /* HTML5 display-role reset for older browsers */
